@@ -16,7 +16,7 @@
 <p><label for="target_os">Operating System</label>
 <%= select 'target', 'os', OPERATING_SYSTEMS.sort, :include_blank => true %></p>
 
-<p><label for="target_vm">Virtual Machine/Runtime</label>
+<p><label for="target_vm">Virtual Machine or Runtime (optional)</label>
 <%= select 'target', 'vm', VIRTUAL_MACHINES.sort, :include_blank => true %></p>
 
 <p><label for="target_notes">Notes (optional)</label><br/>
